# Gemma-4

./: .gitignore  IMPROVEMENTS.md  PRIOR_ART.md  README.md  RESEARCH.md  pyproject.toml  sentinel.db.empty.bak
sentinel/: README.md  agent.py  analyze.py  capture.py  digest.py  models.py  settings.py  storage.py  streaming.py  test_analyze.py  ui.py
