[project]
name = "gemma4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.6.4",
    "mlx>=0.31.2",
    "mlx-lm>=0.31.3",
    "mlx-vlm>=0.4.4",
    "mss>=10.2.0",
    "openai>=2.33.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pyyaml>=6.0.3",
]

[tool.uv.sources]
mlx-vlm = { git = "https://github.com/Blaizzy/mlx-vlm.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentinel"]
